--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,14 @@
+/* ESTILOS GERAIS */
 * {
   margin: 0;
   padding: 0;
   border: 0;
-}  
+}
 
-/*@font-face {
+@font-face {
   font-family: NossaFonte;
   src: url(./fonts/bahnschrift.ttf);
-}*/
+}
 
 body {  
   font-family: NossaFonte;
@@ -15,11 +16,16 @@ body {
 
 p {
   color: #2D2D2D;
-  font-weight: 200;
+  font-weight: 100;
+  line-height: 2.5rem;
 }
 
-/* DESKTOP */
+h3 {
+  font-size: 1.4rem;
+}
 
+
+/* DESKTOP */
 #Desktop {
   width: 100%;
   margin: auto;
@@ -37,8 +43,8 @@ p {
 }
 
 
-/* MOBILE */
 
+/* MOBILE */
 /* ---- LOGIN.JS ---- */
 #Login {
   margin: auto;
@@ -48,41 +54,6 @@ p {
 #ImagemLogin {
   width: 250px;
   margin: 30px auto;
-  display: block;
-}
-
-#Login h3 {
-  font-size: 1.6rem;
-  text-align: center;
-  color: #A4A4A4;
-  margin-bottom: 20px;
-}
-
-#Login input {
-  width: 100%;
-  padding: 14px 0;
-  text-align: center;
-  background-color: #F2F2F2;
-  margin-bottom: 10px;
-  color: #2D2D2D;
-  border-radius: 15px;
-  /*não sei pq mas a box-shadow não dá em mobile*/
-  box-shadow: 5px 5px 20px 1px rgb(45, 45, 45, 0.2);
-  -webkit-box-shadow: 5px 5px 20px 1px rgb(45, 45, 45, 0.2);
-  -moz-box-shadow: 5px 5px 20px 1px rgb(45, 45, 45, 0.2);
-}
-
-#Login input::placeholder {
-  color: #2D2D2D;
-  font-weight: 100;
-}
-
-#Login input:last-of-type {
-  margin-bottom: 25px;
-}
-
-#BotoesForm button {
-  margin: auto;
   display: block;
 }
 
@@ -120,4 +91,42 @@ p {
   width: 90%;
   font-family: NossaFonte;
   margin: auto;
+}
+
+
+/* ---- LIST.JS ---- */
+#List {
+  width: 90%;
+  margin: 20px auto;
+  overflow: hidden;
+}
+
+#List h3 {
+  width: 72px;
+  height: 40px;
+  float: left;
+  margin: 0;
+  padding: 12px 12px;
+  background-color: #f2f2f2;
+  color: #2d2d2d;
+}
+
+#List select {
+  width: 250px;
+  height: 40px;
+  background-color: #F2F2F2;
+  margin-left: 2px;
+  margin-bottom: 5px;
+  padding-left: 5px;
+  float: left;
+}
+
+#List p {
+  width: 250px;
+  height: 40px;
+  background-color: #F2F2F2;
+  float: left;
+  margin-left: 2px;
+  padding-top: 10px;
+  padding: 10px;
 }
