--- a/src/styles.css
+++ b/src/styles.css
@@ -121,3 +121,13 @@ p {
   font-family: NossaFonte;
   margin: auto;
 }
+
+button {
+  padding: 20px 42px;
+  background-color: rgb(255, 186, 59);
+  color: white;
+  border-radius: 15px;
+  font-size: 1.6rem;
+  margin: auto;
+  display: block;
+}
