--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,12 @@
   src: url(./fonts/bahnschrift.ttf);
 }
 
-body {  
+@font-face {
+  font-family: gineva;
+  src: url(./fonts/gineva.otf);
+}
+
+body {
   font-family: NossaFonte;
 }
 
@@ -18,6 +23,11 @@ p {
   color: #2D2D2D;
   font-weight: 100;
   line-height: 2.5rem;
+}
+
+a {
+  text-decoration: none;
+  color: #2D2D2D;
 }
 
 h3 {
@@ -42,6 +52,41 @@ h3 {
   font-size: 2rem;
 }
 
+
+/* ---- MENU.JS ---- */
+#Menu {
+  width: 100%;
+  overflow: hidden;
+  background-color: #ABB5E8;
+}
+
+#Menu h2 {
+  font-family: gineva;
+  margin: 0;
+  padding: 18px 20px;
+  float: right;
+  font-size: 2.5rem;
+}
+
+#Menu img {
+  width: 78px;
+  padding: 20px;
+}
+
+#Menu img:hover {
+  cursor: pointer;
+}
+
+#ListaMenu {
+  display: none;
+  background-color: #F2F2F2;
+  width: 100%;
+}
+
+#ListaMenu li {
+  padding: 20px 20px;
+  list-style-type: none;
+}
 
 
 /* MOBILE */
