--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ h3 {
 }
 
 #Menu img {
-  width: 78px;
+  width: 76px;
   padding: 20px;
 }
 
@@ -86,6 +86,11 @@ h3 {
 #ListaMenu li {
   padding: 20px 20px;
   list-style-type: none;
+}
+
+#ListaMenu img {
+  width: 58px;
+  float: left;
 }
 
 
