--- a/src/styles.css
+++ b/src/styles.css
@@ -200,14 +200,16 @@ h3 {
 
 .input-number{
   width: 50%;
-  margin-left: 45%;
+  margin-left: 5%;
 }
 
 .caixinha{
+  border: 2px solid transparent;
+  border-radius: 40px;
   background-color:rgb(221, 221, 221);
-  width: 400px;
+  width: 265px;
   height: 300px;
-  padding-left: 130px;
+  padding-left: 65px;
   box-shadow:0 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -215,6 +217,13 @@ h3 {
   width: 50%;
   display: block;
   padding-top: 25px;
+  margin-left: 25px;
+}
+
+.caixinha h4{
+  font-size: 25px;
+  margin-left: 30px;
+  margin-top: 35px;
 }
 #Reserva span {
   display: inline-block;
@@ -245,6 +254,26 @@ h3 {
   background-color: rgba(155, 105, 189, 0.493);
 }
 
+
 #btn_finaliza_compra {
   display: none;
+  background-color: rgb(121, 45, 121);
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  margin-left: 100px;
+}
+
+#btn_finaliza_compra:hover{
+  background-color: rgba(121, 45, 121, 0.541);
+}
+
+#btn_compra {
+  margin-left: 30px;
+  margin-top: 30px;
+  background: transparent;
+}
+
+#btn_compra img{
+  width: 45px;
 }
