--- a/src/styles.css
+++ b/src/styles.css
@@ -69,6 +69,7 @@ h3 {
   overflow: hidden;
   background-color: #ABB5E8;
   margin-bottom: 40px;
+  box-shadow:  0px 10px 37px rgba(0, 0, 0, 0.4);
 }
 
 #Menu h2 {
@@ -372,4 +373,22 @@ h3 {
 #EstadoReserva {
   width: 90%;
   margin: auto;
+}
+
+.EstadoP {
+  color: #A4A4A4;
+  text-align: center;
+  font-weight: 100;
+}
+
+#EstadoReserva img {
+  width: 70%;
+  display: block;
+  margin: 40px auto;
+}
+
+#EstadoReserva h3 {
+  text-align: center;
+  color: #0a355c;
+  font-weight: 800;
 }
