--- a/src/styles.css
+++ b/src/styles.css
@@ -38,10 +38,19 @@ h1 {
   color: #0A355C;
   text-transform: uppercase;
   font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 h3 {
   font-size: 1.4rem;
+}
+
+input[type=date] {
+  line-height: 18px;
+  width: 250px;
+  background-color: #F2F2F2;
+  padding: 10px 20px;
 }
 
 
@@ -69,7 +78,7 @@ h3 {
   overflow: hidden;
   background-color: #ABB5E8;
   margin-bottom: 40px;
-  box-shadow:  0px 10px 37px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 10px 37px rgba(0, 0, 0, 0.4);
 }
 
 #Menu h2 {
@@ -132,9 +141,8 @@ h3 {
   color: white;
   border-radius: 15px;
   font-size: 1.6rem;
-  margin: auto;
   display: block;
-  margin-bottom: 50px;
+  margin: 25px auto;
 }
 
 #MapaGoogle {
@@ -197,36 +205,62 @@ h3 {
 
 /** ---- RESERVA.JS ---- **/
 #Reserva {
-  position: relative;
-  overflow: hidden;
+  width: 90%;
   margin: auto;
-  border-radius: 20px;
-  width: 100%;
-  padding-bottom: 15px;
+  overflow: hidden;
+}
+
+#Reserva h3 {
+  background-color: #F2F2F2;
+  width: 95px;
+  padding: 12px;
+  float: left;
+  margin: 0 10px 40px 0;
+}
+
+.inputReserva {
+  background-color: #F2F2F2;
+  padding: 8px 15px;
+  width: 20%;
+  line-height: 25px;
+  float: left;
+  margin-right: 4px;
+}
+
+#numTlmv {
+  background-color: #F2F2F2;
+  padding: 10px 25px;
+  width: 350px;
+  margin-bottom: 40px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 12px;
+}
+
+input#numTlmv::placeholder {
+  color: #2D2D2D;
 }
 
 .caixinha {
   border-radius: 40px;
   background-color: rgb(221, 221, 221);
-  width: 180px;
+  width: 164px;
   overflow: hidden;
-  padding: 20px 30px;
+  padding: 20px 20px;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
   float: left;
-  margin: 0 4%;
+  margin: 0 2% 30px 2%;
 }
 
 .caixinha img {
-  width: 100%;
+  width: 83%;
   display: block;
-  padding-top: 5px;
   margin: auto;
 }
 
 .caixinha h4 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
-  margin-top: 25px;
+  margin-top: 20px;
 }
 
 .botoesReserva {
@@ -237,9 +271,9 @@ h3 {
 
 .botoesReserva span {
   display: inline-block;
-  width: 52px;
+  width: 56px;
   text-align: center;
-  line-height: 40px;
+  line-height: 30px;
   font-size: 1.5rem;
   color: #6C6DFF;
 }
@@ -257,14 +291,20 @@ h3 {
   background-color: rgb(155, 105, 189);
 }
 
+#Roupas {
+  clear: both;
+  overflow: hidden;
+  margin-bottom: 40px;
+  padding-bottom: 20px;
+}
+
 #btn_finaliza_compra {
   display: none;
   background-color: #2d2d2d;
   width: 180px;
   overflow: hidden;
   border-radius: 20px;
-  margin-top: 40px;
-  margin-left: calc(50% - 90px);
+  margin: 40px auto 50px calc(50% - 90px);
   padding: 20px;
 }
 
@@ -280,6 +320,20 @@ h3 {
   margin: 0 0 0 20px;
 }
 
+#selectTempo {
+  overflow: hidden;
+  clear: both;
+}
+
+#selectTempo select {
+  width: 75%;
+  background-color: #F2F2F2;
+  padding: 12.5px 16px;
+}
+
+#data {
+  width: 75%;
+}
 
 
 /** ---- PAGAMENTO.JS ---- **/
@@ -391,4 +445,23 @@ h3 {
   text-align: center;
   color: #0a355c;
   font-weight: 800;
+}
+
+
+/* ---- APOSENCOMENDA.JS ---- */
+#AposEncomenda {
+  width: 65%;
+  margin: auto;
+}
+
+#AposEncomenda img {
+  width: 100%;
+  display: block;
+  margin: 80px auto 30px auto;
+}
+
+#AposEncomenda h5 {
+  font-size: 2rem;
+  text-align: center;
+  line-height: 40px;
 }
