--- a/src/styles.css
+++ b/src/styles.css
@@ -447,6 +447,11 @@ input#numTlmv::placeholder {
   font-weight: 800;
 }
 
+#estadoImg {
+  width: 38% !important;
+  margin: 30px auto 50px auto !important;
+}
+
 
 /* ---- APOSENCOMENDA.JS ---- */
 #AposEncomenda {
