--- a/src/styles.css
+++ b/src/styles.css
@@ -397,50 +397,26 @@ h3 {
 
 /***  CSS TABLE ESTAFETA  ****/
 
- /* The Grid */
 
- .grid {
-  width: 100%;
-  display: table;
-  border-collapse:separate;
-  border-spacing:5px;
-}
-
-.grid-row {
-  width: 100%;
-  display: table;
-  table-layout: fixed;
-  margin:0 0 -15px 0;
-  background: #ABB5E8;
-  color:white
-}
-
-.item {
-  display: table-cell;
-  color: black;
-  padding: 2%;
-  text-align: center;
+#selectmain {
+  margin-top: 50px;
+  background-color: #ABB5E8;
+  width: 50%;
+  height: 50px;
+  color: white;
 
 }
+ #clienteInfo{
+  float: left;
+  width: 40%;
+ }
 
-.grid hr{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border-top: 4px solid #eee;
-}
-@media screen and (max-width: 480px) {
+ #roupa{
+  float: left;
+  width: 50%;
+ }
 
-  .grid-row {
-     display: block;
-     width: 100%;
-     margin:0;
-  }
-   
-  .item {
-   display: block;
-   width: 100%;
-   margin: 0 0 5px 0;
-  }  
-  
+ .adp-summary{
+    font-size: 50px;
  }
  
